<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:weightSum="6"
    android:orientation="vertical"
    tools:context="be.formath.formathmobile.control.GameActivityFragments.PlayFieldFragment">
    <TextView
        style="@style/AppTheme.textViewStyleBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/play_field_title"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/main_menu_item_text_color"
        android:textIsSelectable="false"
        android:text="@string/play_field_default_title" />
    <TextView
        style="@style/AppTheme.textViewStyleBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/play_field_subtitle"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="@color/main_menu_item_text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textIsSelectable="false"
        android:text="@string/play_field_default_title" />
    <TextView
        style="@style/AppTheme.textViewStyleBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_field_default_operation_label"
        android:textAlignment="center"
        android:textColor="@color/main_menu_item_text_color"
        android:textSize="20sp"
        android:id="@+id/play_field_label_operation"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_weight="1" />
    <TextView
        style="@style/AppTheme.textViewStyleBasic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/play_field_user_response"
        android:textAlignment="center"
        android:layout_weight="1"
        android:text="@string/play_field_default_user_response"
        android:textSize="40sp" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:rowCount="5"
        android:columnCount="4"
        android:orientation="horizontal">
        <Button
            android:id="@+id/play_field_key_1"
            android:layout_gravity="fill"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/play_field_key_1"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_key_2"
            android:layout_gravity="fill"
            android:layout_columnSpan="1"
            android:layout_rowSpan="1"
            android:text="@string/play_field_key_2"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_key_3"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_key_3"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_key_backspace"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_back_space"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_key_4"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_key_4"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_key_5"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_key_5"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_key_6"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_key_6"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_clear_all"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_clear"
            android:textColor="@color/text_color_button"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/play_field_key_7"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_key_7"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_key_8"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:textSize="30sp"
            android:text="@string/play_field_key_8"
            android:textColor="@color/text_color_button"/>
        <Button
            android:id="@+id/play_field_key_9"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_key_9"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_key_minus"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_minus"
            android:textColor="@color/text_color_button"
            android:textSize="30sp"/>
        <Button
            android:id="@+id/play_field_key_coma"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_coma"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_key_0"
            android:layout_columnSpan="1"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_key_0"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_key_pass"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_key_pass"
            android:textColor="@color/text_color_button"
            android:textSize="30sp" />
        <Button
            android:id="@+id/play_field_btn_validate"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:layout_rowSpan="1"
            android:text="@string/play_field_validation"
            android:textColor="@color/text_color_button"
            android:textSize="25sp" />
    </GridLayout>
</LinearLayout>